--- a/assets/sass/layout/home_mq.scss
+++ b/assets/sass/layout/home_mq.scss
@@ -1,147 +1,297 @@
 @media (min-width: 1281px) {}
+
 @media (min-width: 1025px) and (max-width: 1280px) {
     ///footer///
     #footer-widgets .widget .textwidget .brand-wrap > .brand-text {
         margin: 14px 0px 14px 4px;
     }
 }
+
 @media (min-width: 992px) and (max-width: 1024px) {
     ////////  home page > header ///////////
     //_______________________________________ navbar
-    .navbar-default .navbar-nav > li > a{
+    .navbar-default .navbar-nav > li > a {
         padding: 15px;
-    }
-    ///footer///
+    } ///footer///
     #footer-widgets .widget .textwidget .brand-wrap > .brand-text {
         margin: 14px 0px 14px 4px;
-    }
-    /////////////// About us page
+    } /////////////// About us page
     .about-page-content {
-    padding: 3rem 2rem;
-    margin: 1rem 0 0 -10rem;
+        padding: 3rem 2rem;
+        margin: 1rem 0 0 -10rem;
     }
-    .our_box{
+    .our_box {
         min-height: 290px;
     }
 
 
 
 }
-@media (min-width: 768px) and  (max-width: 992px) {
+
+@media (min-width: 768px) and (max-width: 992px) {
     ////////  home page > header ///////////
-    .banner-text h1{font-size: 50px;}
-    .banner-text h3{font-size: 18px;}
-    .text-warpper .btn.btn-lg.btn-primary{font-size: 15px;}
-//    -------------home > about us
-    #id-about .section-heading h2{margin-top: 0;}
-    .highlight h4 {font-size: 23px;}
-    .navbar.navbar-default .brand-wrap .brand-text {display: none;}
-//    -----------footer
-    #id-footer .textwidget{display: flex;flex-direction: column;}
+    .banner-text h1 {
+        font-size: 50px;
+    }
+    .banner-text h3 {
+        font-size: 18px;
+    }
+    .text-warpper .btn.btn-lg.btn-primary {
+        font-size: 15px;
+    }
+    //    -------------home > about us
+    #id-about .section-heading h2 {
+        margin-top: 0;
+    }
+    .highlight h4 {
+        font-size: 23px;
+    }
+    .navbar.navbar-default .brand-wrap .brand-text {
+        display: none;
+    }
+    //    -----------footer
+    #id-footer .textwidget {
+        display: flex;
+        flex-direction: column;
+    }
 }
-@media (min-width: 600px) and  (max-width: 992px) {
+
+@media (min-width: 600px) and (max-width: 992px) {
     //////// for contact us page
-    .b-left-push{left: 25%;}}
-@media (max-width: 992px){
-//    -------our people is our asset
-    .asset .carousel-control.right {right: 20px;}
-    .asset .carousel-control.left {left: 20px;}
-    //////////abouy us page
-    .about-page-content{
+    .b-left-push {
+        left: 25%;
+    }
+}
+
+@media (max-width: 992px) {
+    //    -------our people is our asset
+    .asset .carousel-control.right {
+        right: 20px;
+    }
+    .asset .carousel-control.left {
+        left: 20px;
+    } //////////abouy us page
+    .about-page-content {
         margin: 3rem 0 0 0;
     }
-    .team_area__cover_heading p.specific_heading{
+    .team_area__cover_heading p.specific_heading {
         left: -60px;
     }
-    .inc-isb{
-        left: -23px!important;
+    .inc-isb {
+        left: -23px !important;
     }
-    .margin-t{margin-top:65px;}
+    .margin-t {
+        margin-top: 65px;
+    }
+    .our-services {
+        padding-bottom: 20px;
+    }
 
 }
-@media (max-width: 767px){
-//--------navbar
-    .navbar-default .navbar-brand {padding: 15px 0 15px 15px;}
+
+@media (max-width: 767px) {
+    //--------navbar
+    .navbar-default .navbar-brand {
+        padding: 15px 0 15px 15px;
+    }
     .navbar-default .navbar-toggle,
-    .navbar-default .navbar-toggle:focus,  .navbar-default .navbar-toggle:visited, .navbar-default .navbar-toggle:hover{background-color: transparent;margin-top: 15px; color: #fff;}
-//--------header
+    .navbar-default .navbar-toggle:focus,
+    .navbar-default .navbar-toggle:visited,
+    .navbar-default .navbar-toggle:hover {
+        background-color: transparent;
+        margin-top: 15px;
+        color: #fff;
+    }
+    //--------header
+    .section-heading h2 {
+        font-size: 35px;
+    }
+    .banner-text h1 {
+        font-size: 40px;
+    }
+    .banner-text h3 {
+        font-size: 15px;
+    }
+    .text-warpper .btn.btn-lg.btn-primary {
+        font-size: 14px;
+    }
+    //------ home> about
+    .section-heading h2 {
+        margin-bottom: 40px;
+    }
+    .section-heading h2:after {
+        margin-bottom: 30px;
+    }
+    #id-about a.btn-lg {
+        font-size: 15px;
+    }
+    #id-footer .textwidget {
+        display: flex;
+        flex-direction: column;
+    } ////////////////about us page
+    .b-left-push {
+        left: 0%;
+    }
+    .margin-t-2 {
+        margin-top: 65px;
+    }
+    .team_heading > h3 {
+        font-size: 30px;
+    }
+    .team_area h4 {
+        font-size: 26px;
+    } ///////////////portfolio page
+    section#ict-app .contant-text {
+        padding-top: 20px;
+    }
+    section#gis .contant-text {
+        padding-top: 20px;
+    }
+    section#mae .contant-text {
+        padding-top: 20px;
+    }
+    .col-md-6.col-sm-12.contant-img {
+        padding: 30px !important;
+    }
+    .prod-img {
+        height: 450px;
+    } /////////////////service page
+    .default-section.paralex {
+        padding-bottom: 500px;
+    }
 
-    .section-heading h2 {font-size: 35px;}
-    .banner-text h1{font-size: 40px;}
-    .banner-text h3{font-size: 15px;}
-    .text-warpper .btn.btn-lg.btn-primary{font-size: 14px;}
-//------ home> about
-    .section-heading h2 {margin-bottom: 40px;}
-    .section-heading h2:after{margin-bottom: 30px;}
-    #id-about a.btn-lg{font-size: 15px;}
-    #id-footer .textwidget{display: flex;flex-direction: column;}
-    ////////////////about us page
-    .b-left-push{left: 0%;}
-    .margin-t-2{margin-top:65px;}
-    .team_heading > h3{font-size: 30px;}
-    .team_area h4 {font-size: 26px;}
 }
+//@media (max-width: 600px) {
+//        /////////////////service page
+//    .col-md-5.s-paralex__images{
+//        display: none;
+//    }
+//    .default-section.paralex {
+//        padding-bottom: 100px;
+//    }
+//}
+
 @media (max-width: 480px) {
     //_______________________________________ navbar
-        #id-about .imgs{display: none;}
+    #id-about .imgs {
+        display: none;
+    }
 
-    .col-w-100{width: 100%;}
-    #id-services .services-media-list.text-left{padding: 60px 20px;}
-    .services-media-list h2{font-size: 30px;margin-bottom: 5px;}
-    .Why-us > li > i {padding-right: 10px;}
-    ul.Why-us li{padding-bottom: 10px;}
-    .Why-us{    font-size: 15px;}
-
-    /////////////asset
-    .asset .carousel-inner .carousel-content p{
+    .col-w-100 {
+        width: 100%;
+    }
+    #id-services .services-media-list.text-left {
+        padding: 60px 20px;
+    }
+    .services-media-list h2 {
+        font-size: 30px;
+        margin-bottom: 5px;
+    }
+    .Why-us > li > i {
+        padding-right: 10px;
+    }
+    ul.Why-us li {
+        padding-bottom: 10px;
+    }
+    .Why-us {
+        font-size: 15px;
+    } /////////////asset
+    .asset .carousel-inner .carousel-content p {
         font-size: 13px;
 
     }
-    .asset_mainhead{font-size: 40px;}
-    .asset_subhead{font-size: 15px;}
+    .asset_mainhead {
+        font-size: 40px;
+    }
+    .asset_subhead {
+        font-size: 15px;
+    }
     .text-center-xs {
-        text-align: center!important;
+        text-align: center !important;
     }
-    .highlight.blue .text-right.col-w-100.text-center-xs{
+    .highlight.blue .text-right.col-w-100.text-center-xs {
         padding-top: 20px;
-    }
-    //////////////////////////////////////////
-    ///////// ontact us page/////////////////
+    } //////////////////////////////////////////
+    ///////// About us page////////////////
     ////////////////////////////////////////
-    .text_main{
+    .team_area h4 {
+        font-size: 25px;
+    }
+    .c-col-md-5 {
+        width: 100%;
+    }
+    .c-col-md-3 {
+        width: 100%;
+    }
+    .coverage-m1 {
+        margin: 30px 15px 30px 15px;
+    }
+    .coverage-m2 {
+        margin: 30px 15px 30px 15px;
+    }
+    .team_heading {
+        width: 90%;
+    }
+    .team_area h4 {
+        font-size: 18px !important;
+        letter-spacing: 0px;
+    }
+    .team_area__cover_heading .specific_heading {
+        display: none;
+    }
+    .team_area {
+        padding-left: 0px;
+    }
+    .breaker {
+        margin: 10px 0 20px 0;
+    } //////////////////////////////////////////
+    ///////// contact us page////////////////
+    ////////////////////////////////////////
+    .text_main {
         font-size: 30px;
     }
-    .text_secondary > a{
+    .text_secondary > a {
         font-size: 16px;
     }
-    .Hslash{
+    .Hslash {
         font-size: 16px;
     }
-    .atext{
+    .atext {
         line-height: 15rem;
     }
-    .about_head{
+    .about_head {
         height: 15rem;
+    } /////////////////portfoliopage
+    .col-md-6.col-sm-12.contant-img {
+        padding: 20px !important;
+    }
+    ///////////////////////services
+    .s-paralex__description > h3::before{
+        top: 245px;
     }
 }
+
 @media (max-width: 389px) {
     .navbar-default.floating-menu .navbar-brand {
         padding: 10px;
     }
-    .navbar-default .navbar-toggle, .navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:visited, .navbar-default .navbar-toggle:hover{
+    .navbar-default .navbar-toggle,
+    .navbar-default .navbar-toggle:focus,
+    .navbar-default .navbar-toggle:visited,
+    .navbar-default .navbar-toggle:hover {
         margin-top: 15px;
     }
-    .brand-wrap .brand-text{
+    .brand-wrap .brand-text {
         margin-left: 3px;
-        & span{
-        font-size: 11px;
+        & span {
+            font-size: 11px;
         }
-        & strong{
-        font-size: 18px;
+        & strong {
+            font-size: 18px;
 
         }
     }
-    .brand-wrap .brand-text{
-            margin-top: 5px;
+    .brand-wrap .brand-text {
+        margin-top: 5px;
     }
 }
