--- a/assets/sass/pages/portfolio.scss
+++ b/assets/sass/pages/portfolio.scss
@@ -1,3 +1,34 @@
+.p-t-70{
+    padding: 70px 0px 0px 0px!important;
+}
+.p-outsourcing {
+    background-image: url(../images/web-development-banner-0012.jpg);
+    background-size: cover;
+    height: 420px;
+    position: relative;
+    & .cover-wrapper {
+        display: flex;
+        flex-direction: column;
+        color: #fff;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        height: 420px;
+        & h3 {
+            font-size: 40px;
+            margin-bottom: 20px;
+            color: #ffffff;
+            line-height: 1em;
+            text-align: center;
+        }
+        & p {
+            font-size: 18px;
+            color: #ffffff;
+            line-height: 1.8em;
+            text-align: center;
+        }
+    }
+}
 
 .prod-img {
     position: relative;
@@ -7,7 +38,7 @@
     height: 511px;
 }
 
-section#ict-app{
+section#ict-app {
     & .contant-text {
         padding-top: 30px;
         padding-left: 20px;
@@ -15,11 +46,12 @@ section#ict-app{
     & img {
         margin: 0 auto;
     }
-    & .ict-image{
-            background-image: url('../images/projects/ict.jpg');
+    & .ict-image {
+        background-image: url('../images/projects/ict.jpg');
     }
 }
-section#SADM{
+
+section#SADM {
     & .contant-text {
         padding-top: 40px;
         padding-left: 20px;
@@ -27,46 +59,49 @@ section#SADM{
     & img {
         margin: 0 auto;
     }
-        & .ict-image{
-            background-image: url('../images/projects/2.jpg');
+    & .ict-image {
+        background-image: url('../images/projects/2.jpg');
     }
 
 }
-section#mis{
+
+section#mis {
     & .contant-text {
         padding-left: 20px;
     }
     & img {
         margin: 0 auto;
     }
-    & .ict-image{
-            background-image: url('../images/projects/analysis-business-businesswoman-955447.jpg');
+    & .ict-image {
+        background-image: url('../images/projects/analysis-business-businesswoman-955447.jpg');
     }
 
 }
-section#gis{
+
+section#gis {
     & .contant-text {
-    padding-top: 80px;
-    padding-left: 20px;
+        padding-top: 80px;
+        padding-left: 20px;
     }
     & img {
         margin: 0 auto;
     }
-    & .ict-image{
-            background-image: url('../images/projects/analytics-business-chart-920116.jpg');
+    & .ict-image {
+        background-image: url('../images/projects/analytics-business-chart-920116.jpg');
     }
 
 }
-section#mae{
+
+section#mae {
     & .contant-text {
-    padding-top: 90px;
-    padding-left: 20px;
+        padding-top: 90px;
+        padding-left: 20px;
     }
     & img {
         margin: 0 auto;
     }
-    & .ict-image{
-            background-image: url('../images/projects/charts-computer-data-669615.jpg');
+    & .ict-image {
+        background-image: url('../images/projects/charts-computer-data-669615.jpg');
     }
 }
 
