--- a/assets/sass/pages/services.scss
+++ b/assets/sass/pages/services.scss
@@ -1,3 +1,4 @@
+
 //---------------------------------pages_banner
 .frame-slider > h2 {
     text-align: center;
@@ -277,7 +278,9 @@
                 margin: 32px 0 30px 0;
             }
         }
-        &-paragraph {}
+        &-paragraph {
+            text-align: justify;
+        }
     }
     &__list {
         margin-top: 15px;
@@ -345,7 +348,7 @@
     & .texxt {}
     & h3 {
         position: absolute;
-        top: 270px;
+        top: 30px;
         z-index: 999;
         left: 8%;
         transition: all .3s ease-out;
@@ -356,18 +359,13 @@
         font-size: 24px;
         transition: all .3s ease-out;
     }
-    //    &:hover h3 {
-    //        transform: translateY(-150px);
-    //
-    //    }
-    //        &:hover p {
-    //        transform: translateY(-150px);
-    //        opacity: 1;
-    //    }
-    //    & p{
-    //        opacity: 0;
-    //         transform: translateY(150px);
-    //    }
+    & p{
+        position: absolute;
+        top: 110px;
+        color: #e8e5e5;
+        z-index: 998;
+        padding: 0px 20px;
+    }
 }
 
 .light-blue-overlay {
