--- a/assets/sass/pages/services.scss
+++ b/assets/sass/pages/services.scss
@@ -1,4 +1,3 @@
-
 //---------------------------------pages_banner
 .frame-slider > h2 {
     text-align: center;
@@ -110,8 +109,12 @@
         }
         & p.main-p {
             margin: 60px 0 10px 0;
-            color: $color-black;
+            color: black;
+            font-weight: 700;
             font-size: 15px;
+        }
+        & p {
+            color: black;
         }
     }
     & ul {
@@ -190,13 +193,20 @@
 }
 
 //----------------------------------------feature section end--------------------------
+p.success__paragraph{
+    color: black;
+}
 .success {
+    &__paragraph  {
+        color: black;
+    }
     &__heading {
         font-size: 50px;
         font-weight: 300;
         letter-spacing: 5px;
         margin: 20px 0px 100px;
         position: relative;
+
         & span {
             font-weight: 600;
             color: $color-secondary-light;
@@ -217,7 +227,9 @@
         letter-spacing: 1px;
     }
     &__box {
-
+        & p {
+            color: black;
+        }
         & i {
             margin-top: 20px;
             font-size: 30px;
@@ -280,6 +292,7 @@
         }
         &-paragraph {
             text-align: justify;
+              color: $color-black;
         }
     }
     &__list {
@@ -288,12 +301,16 @@
         &-item {
             margin-bottom: 15px;
             & > i {
+
                 margin-right: 10px;
                 font-weight: 300;
                 color: $color-secondary-light;
             }
         }
     }
+}
+p.detail__text-paragraph{
+     color: $color-black;
 }
 
 //-----------------------------all services
@@ -359,7 +376,7 @@
         font-size: 24px;
         transition: all .3s ease-out;
     }
-    & p{
+    & p {
         position: absolute;
         top: 110px;
         color: #e8e5e5;
